@@ -1,3 +1,8 @@
+2004-11-11  Randolph Chung  <tausq@debian.org>
+
+	* hppa-tdep.c (hppa_frame_cache): Properly handle the frame pointer
+	register so that it can be unwound from anywhere in the prologue.
+
 2004-11-10  msnyder  <msnyder@redhat.com>
 
 	* rs6000-tdep.c (skip_prologue): After saving lr_offset, 
